Fix MongoDB connection for Render deployment

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 PORT=5000
-MONGO_URI=mongodb+srv://darshandarshan94356_db_user:bQdHmSUDplye4EtB@blog.tmflqeu.mongodb.net/?retryWrites=true&w=majority&appName=blog
+MONGO_URI=mongodb+srv://darshandarshan94356_db_user:bQdHmSUDplye4EtB@blog.tmflqeu.mongodb.net/blog?retryWrites=true&w=majority
+
 CLOUD_NAME=df9ml9wbz
 API_KEY=752489793971547
 SECRET_KEY=5SA8xjLfSKjR9v5SlEjgMSlpVIE
 FRONTEND_URL = https://darshan-blog.netlify.app
+
 
 
